--- a/styles/modules/blocks/grid-container/__image/_section/grid-container__image_section_search.scss
+++ b/styles/modules/blocks/grid-container/__image/_section/grid-container__image_section_search.scss
@@ -9,5 +9,8 @@
     grid-column: unset;
     grid-row: unset;
     max-width: 860px;
+    aspect-ratio: 688 / 360;
+    object-fit: cover;
+    object-position: bottom;
   }
 }
