--- a/styles/modules/blocks/header/__close-button/_opened/header__close-button_opened.scss
+++ b/styles/modules/blocks/header/__close-button/_opened/header__close-button_opened.scss
@@ -1,3 +1,9 @@
 .header__close-button_opened {
-  display: flex;
+  display: none;
+}
+
+@media (max-width: $breakpoint-middle) {
+  .header__close-button_opened {
+    display: flex;
+  }
 }
