--- a/styles/modules/blocks/header/__logo/_closed/header__logo_closed.scss
+++ b/styles/modules/blocks/header/__logo/_closed/header__logo_closed.scss
@@ -1,5 +1,11 @@
 .header__logo_closed {
-  display: none;
+  display: flex;
+}
+
+@media (max-width: $breakpoint-middle) {
+  .header__logo_closed {
+    display: none;
+  }
 }
 
 @media (max-width: $breakpoint-narrow) {
