--- a/styles/modules/variables.scss
+++ b/styles/modules/variables.scss
@@ -10,11 +10,11 @@ $font-color-nav-links: #fbfbfb;
 $content-color-theme-light: black;
 $content-color-theme-dark: white;
 
-$section-padding: 50px;
+$section-padding: 50px 50px 50px 48px;
 
-$section-padding-tablet: 40px;
+$section-padding-tablet: 40px 40px 40px 38px;
 
-$section-padding-mobile: 40px 20px 20px;
+$section-padding-mobile: 14px 20px 20px 18px;
 
 $breakpoint-wide: 1400px;
 $breakpoint-middle: 940px;
