--- a/styles/index.css
+++ b/styles/index.css
@@ -2,10 +2,7 @@
 @import "./vendor/fonts.css";
 .page {
   margin: 0 auto;
-  padding: 0;
   font-family: "Roboto", "Inter", "Arial", sans-serif;
-  width: 100%;
-  max-width: 1440px;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -15,20 +12,27 @@
 }
 
 .header {
+  background-color: #df2626;
+  background-size: 100%;
+}
+
+.header__container {
+  margin: 0 auto;
   padding: 22px 50px;
+  box-sizing: border-box;
+  max-width: 1440px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #df2626;
 }
 
 @media (max-width: 940px) {
-  .header {
+  .header__container {
     padding: 24px 40px;
   }
 }
 @media (max-width: 690px) {
-  .header {
+  .header__container {
     padding: 20px;
     align-items: flex-start;
   }
@@ -52,9 +56,14 @@
   }
 }
 .header__logo_closed {
-  display: none;
+  display: flex;
 }
 
+@media (max-width: 940px) {
+  .header__logo_closed {
+    display: none;
+  }
+}
 @media (max-width: 690px) {
   .header__logo_closed {
     display: flex;
@@ -166,9 +175,14 @@
 }
 
 .header__close-button_opened {
-  display: flex;
+  display: none;
 }
 
+@media (max-width: 940px) {
+  .header__close-button_opened {
+    display: flex;
+  }
+}
 @-webkit-keyframes rotation {
   from {
     transform: rotate(0deg);
@@ -177,7 +191,6 @@
     transform: rotate(-360deg);
   }
 }
-
 @keyframes rotation {
   from {
     transform: rotate(0deg);
@@ -196,26 +209,37 @@
 }
 
 .section {
-  padding: 50px;
+  padding: 50px 50px 50px 48px;
+  margin: 0 auto;
+  max-width: 1440px;
+  box-sizing: border-box;
 }
 
 @media (max-width: 940px) {
   .section {
-    padding: 40px;
+    padding: 40px 40px 40px 38px;
   }
 }
 @media (max-width: 690px) {
   .section {
-    padding: 40px 20px 20px;
+    padding: 14px 20px 20px 18px;
   }
 }
 .section_place_entry {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
   padding-bottom: 36px;
 }
 
 @media (max-width: 690px) {
   .section_place_entry {
     padding-bottom: 20px;
+  }
+}
+@media (max-width: 690px) {
+  .section_width_narrow {
+    padding-top: 40px;
   }
 }
 .basic-text {
@@ -250,7 +274,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 60px;
+    gap: 30px;
   }
 }
 @media (max-width: 690px) {
@@ -269,25 +293,30 @@
   }
 }
 .grid-container__heading {
-  margin: 0 0 50px 4px;
+  margin: 0 0 50px 6px;
   text-transform: uppercase;
 }
 
 @media (min-width: 941px) and (max-width: 1400px) {
   .grid-container__heading {
-    margin: 0 0 20px 4px;
+    margin: 0 0 20px 6px;
   }
 }
 @media (max-width: 940px) {
   .grid-container__heading {
-    margin: 0 0 40px 4px;
+    margin: 0 0 40px 6px;
   }
 }
 @media (max-width: 690px) {
   .grid-container__heading {
-    margin: 0 0 30px 2px;
+    margin: 0 0 30px 4px;
     padding: 20px 0 0;
     line-height: 1.43;
+  }
+}
+@media (min-width: 691px) and (max-width: 940px) {
+  .grid-container__heading_section_camera {
+    margin: 0 0 40px 8px;
   }
 }
 .grid-container__title {
@@ -306,13 +335,31 @@
   grid-column: 2;
   grid-row: 1/3;
   max-width: 642px;
-  width: 100%;
+  width: calc(100% - 2px);
 }
 
 @media (max-width: 940px) {
   .grid-container__image {
-    margin: -2px 0 0;
+    margin: 0 0 0 2px;
     max-width: 860px;
+  }
+}
+@media (max-width: 940px) {
+  .grid-container__image_section_composition {
+    aspect-ratio: 688/685;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: bottom;
+       object-position: bottom;
+  }
+}
+@media (max-width: 940px) {
+  .grid-container__image_section_camera {
+    aspect-ratio: 688/656;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: top;
+       object-position: top;
   }
 }
 .grid-container__image_section_search {
@@ -326,10 +373,15 @@
     grid-column: unset;
     grid-row: unset;
     max-width: 860px;
+    aspect-ratio: 688/360;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: bottom;
+       object-position: bottom;
   }
 }
 .grid-container__subtitle {
-  margin: 0 0 0 4px;
+  margin: 0 0 0 6px;
   grid-column: 1;
   grid-row: 2;
   align-self: flex-start;
@@ -337,6 +389,7 @@
 
 @media (max-width: 940px) {
   .grid-container__subtitle {
+    margin: 30px 0 30px 6px;
     grid-column: unset;
     grid-row: unset;
     align-self: inherit;
@@ -344,10 +397,11 @@
 }
 @media (max-width: 690px) {
   .grid-container__subtitle {
-    margin: 0 0 -30px 2px;
+    margin: 30px 0 0 4px;
   }
 }
 .grid-container__link {
+  margin: 0 0 0 2px;
   grid-column: 1;
   grid-row: 2;
   align-self: flex-end;
@@ -387,15 +441,21 @@
     line-height: 2;
   }
 }
+.lead {
+  background-color: white;
+  background-size: 100%;
+}
+
 .lead__title {
   margin: 0 0 60px;
+  max-width: 624px;
   font-style: normal;
   font-weight: 400;
   font-size: 100px;
   line-height: 1.1;
 }
 
-@media (max-width: 1400px) {
+@media (min-width: 941px) and (max-width: 1400px) {
   .lead__title {
     font-size: 52px;
     margin: 0 0 20px;
@@ -404,17 +464,17 @@
 }
 @media (max-width: 940px) {
   .lead__title {
-    margin: 0 0 0 -2px;
+    margin: 0 0 30px;
   }
 }
 @media (max-width: 690px) {
   .lead__title {
     font-size: 47px;
     line-height: 1.19;
-    margin: -26px 0 0 -2px;
   }
 }
 .lead__subtitle {
+  max-width: 469px;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -453,7 +513,7 @@
 }
 .flex-container {
   margin: 0;
-  padding: 100px 4px 0;
+  padding: 100px 4px 0 6px;
   list-style: none;
   display: flex;
   justify-content: space-between;
@@ -462,7 +522,7 @@
 
 @media (max-width: 1400px) {
   .flex-container {
-    padding: 50px 4px 0;
+    padding: 50px 4px 0 6px;
   }
 }
 @media (max-width: 940px) {
@@ -470,16 +530,16 @@
     flex-direction: column;
     justify-content: flex-start;
     align-self: flex-start;
-    padding: 50px 0 0;
+    padding: 50px 0 0 2px;
   }
 }
 @media (max-width: 690px) {
   .flex-container {
-    padding: 66px 0 0;
+    padding: 66px 0 0 2px;
   }
 }
 .flex-container_section_camera {
-  padding: 180px 0 0;
+  padding: 180px 0 0 2px;
   justify-content: flex-start;
   gap: 172px;
 }
@@ -492,13 +552,13 @@
 }
 @media (max-width: 940px) {
   .flex-container_section_camera {
-    padding: 120px 0 0;
+    padding: 120px 0 0 2px;
     gap: 0;
   }
 }
 @media (max-width: 690px) {
   .flex-container_section_camera {
-    padding: 0;
+    padding-top: 30px;
   }
 }
 .flex-container__element {
@@ -523,21 +583,17 @@
 }
 .composition {
   background-color: #ffce00;
+  background-size: 100%;
 }
 
 .composition__title {
-  margin: 0 0 100px;
+  margin: 0 0 100px 2px;
   max-width: 403px;
 }
 
 @media (max-width: 1400px) {
   .composition__title {
-    margin: 0 0 30px;
-  }
-}
-@media (max-width: 940px) {
-  .composition__title {
-    margin: 0;
+    margin: 0 0 30px 2px;
   }
 }
 .composition__subtitle {
@@ -557,7 +613,7 @@
 }
 @media (max-width: 690px) {
   .composition__subtitle {
-    margin: 0 0 30px 0;
+    margin: 0 0 36px 0;
     max-width: 650px;
   }
 }
@@ -596,10 +652,12 @@
 .camera {
   background-color: black;
   color: white;
+  background-size: 100%;
 }
 
 .camera__title {
-  margin: 0;
+  margin: 0 0 2px;
+  max-width: 617px;
   font-style: normal;
   font-weight: 400;
   font-size: 122px;
@@ -612,6 +670,11 @@
     max-width: 300px;
   }
 }
+@media (max-width: 940px) {
+  .camera__title {
+    margin: 0 0 30px 2px;
+  }
+}
 @media (max-width: 690px) {
   .camera__title {
     font-size: 48px;
@@ -620,12 +683,20 @@
   }
 }
 .camera__reviews-heading {
-  margin-bottom: 0;
+  margin: 0 0 0 6px;
+  text-transform: uppercase;
 }
 
+@media (max-width: 940px) {
+  .camera__reviews-heading {
+    margin: 30px 0 0 6px;
+  }
+}
 @media (max-width: 690px) {
   .camera__reviews-heading {
+    margin: 30px 0 0 2px;
     padding: 0;
+    line-height: 1.43;
   }
 }
 .camera__review {
@@ -652,7 +723,7 @@
 }
 @media (max-width: 690px) {
   .camera__review {
-    padding: 60px 0 30px;
+    padding: 30px 0 30px 2px;
     font-size: 24px;
     line-height: 1.08;
   }
@@ -660,6 +731,12 @@
 @media (max-width: 690px) {
   .camera__reviewer {
     line-height: 1.43;
+  }
+}
+@media (min-width: 691px) {
+  .camera__reviewer_place_sportsman {
+    font-size: 17px;
+    line-height: 1.65;
   }
 }
 .camera__copyright {
@@ -677,8 +754,19 @@
     line-height: 1;
   }
 }
+@media (min-width: 691px) {
+  .camera__copyright_place_sportsman {
+    font-size: 15px;
+    line-height: 1.6;
+  }
+}
+.search {
+  background-color: white;
+  background-size: 100%;
+}
+
 .search__title {
-  margin: 0 0 106px;
+  margin: 0 0 106px 2px;
 }
 
 @media (max-width: 1400px) {
@@ -688,7 +776,7 @@
 }
 @media (max-width: 940px) {
   .search__title {
-    margin: 0;
+    margin: 0 0 30px 2px;
   }
 }
 @media (max-width: 690px) {
@@ -715,8 +803,8 @@
 }
 @media (max-width: 940px) {
   .search__subtitle {
-    margin: 0;
-    padding: 0 0 0 4px;
+    margin: 30px 0 30px 6px;
+    padding: 0;
     grid-column: unset;
     grid-row: unset;
     justify-self: flex-start;
@@ -726,7 +814,7 @@
 }
 @media (max-width: 690px) {
   .search__subtitle {
-    margin: 0 0 -30px;
+    margin: 30px 0 0 2px;
     padding: 0;
     width: 100%;
     max-width: 650px;
@@ -742,7 +830,7 @@
 
 @media (max-width: 940px) {
   .search__link {
-    margin: 0;
+    margin: 0 0 0 2px;
     grid-column: unset;
     grid-row: unset;
     justify-self: flex-start;
@@ -752,14 +840,12 @@
 .entry {
   background-color: #df2626;
   color: white;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  background-size: 100%;
 }
 
 .entry__image {
   display: block;
-  margin: 10px 50px 0 0;
+  margin: 10px 50px 0 2px;
   width: 129px;
   height: 95px;
 }
@@ -777,17 +863,11 @@
   }
 }
 .entry__content {
-  padding-bottom: -14px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-@media (max-width: 940px) {
-  .entry__content {
-    padding-bottom: 0;
-  }
-}
 @media (max-width: 690px) {
   .entry__content {
     padding-top: 20px;
@@ -796,7 +876,7 @@
   }
 }
 .entry__title {
-  margin: 0 0 120px;
+  margin: 0 0 0 2px;
   font-style: normal;
   font-weight: 400;
   font-size: 120px;
@@ -804,18 +884,29 @@
   max-width: 685px;
 }
 
+.entry__title:last-of-type {
+  margin: 0 0 120px 2px;
+}
+
 @media (max-width: 1400px) {
   .entry__title {
-    margin: 0 0 190px;
     font-size: 100px;
+  }
+  .entry__title:first-of-type {
+    margin: 0 0 10px 2px;
+  }
+  .entry__title:last-of-type {
+    margin: 0 0 190px 2px;
   }
 }
 @media (max-width: 690px) {
   .entry__title {
-    margin: 0 0 200px;
     font-size: 48px;
     line-height: 1.04;
     max-width: 300px;
+  }
+  .entry__title:last-of-type {
+    margin: 0 0 200px 2px;
   }
 }
 .form {
@@ -945,10 +1036,11 @@
 }
 .footer {
   background-color: #df2626;
+  background-size: 100%;
 }
 
 .footer__label {
-  margin: 0;
+  margin: 0 0 0 2px;
   font-weight: 700;
   font-size: 15px;
   line-height: 1.6;
@@ -957,7 +1049,7 @@
 
 @media (max-width: 690px) {
   .footer__label {
-    margin: -20px 0 0;
+    margin: 6px 0 0 2px;
     font-size: 12px;
     line-height: 2;
   }
