--- a/styles/modules/blocks/camera/__review/camera__review.scss
+++ b/styles/modules/blocks/camera/__review/camera__review.scss
@@ -24,7 +24,7 @@
 
 @media (max-width: $breakpoint-narrow) {
   .camera__review {
-    padding: 60px 0 30px;
+    padding: 30px 0 30px 2px;
     font-size: 24px;
     line-height: 1.08;
   }
