--- a/styles/modules/blocks/camera/__reviews-heading/camera__reviews-heading.scss
+++ b/styles/modules/blocks/camera/__reviews-heading/camera__reviews-heading.scss
@@ -1,9 +1,18 @@
 .camera__reviews-heading {
-  margin-bottom: 0;
+  margin: 0 0 0 6px;
+  text-transform: uppercase;
+}
+
+@media (max-width: $breakpoint-middle) {
+  .camera__reviews-heading {
+    margin: 30px 0 0 6px;
+  }
 }
 
 @media (max-width: $breakpoint-narrow) {
   .camera__reviews-heading {
+    margin: 30px 0 0 2px;
     padding: 0;
+    line-height: 1.43;
   }
 }
