--- a/styles/modules/blocks/camera/__title/camera__title.scss
+++ b/styles/modules/blocks/camera/__title/camera__title.scss
@@ -1,5 +1,6 @@
 .camera__title {
-  margin: 0;
+  margin: 0 0 2px;
+  max-width: 617px;
   font-style: normal;
   font-weight: 400;
   font-size: 122px;
@@ -10,6 +11,12 @@
   .camera__title {
     font-size: 60px;
     max-width: 300px;
+  }
+}
+
+@media (max-width: $breakpoint-middle) {
+  .camera__title {
+    margin: 0 0 30px 2px;
   }
 }
 
