--- a/styles/modules/blocks/composition/__title/composition__title.scss
+++ b/styles/modules/blocks/composition/__title/composition__title.scss
@@ -1,16 +1,10 @@
 .composition__title {
-  margin: 0 0 100px;
+  margin: 0 0 100px 2px;
   max-width: 403px;
 }
 
 @media (max-width: $breakpoint-wide) {
   .composition__title {
-    margin: 0 0 30px;
-  }
-}
-
-@media (max-width: $breakpoint-middle) {
-  .composition__title {
-    margin: 0;
+    margin: 0 0 30px 2px;
   }
 }
