--- a/styles/modules/blocks/entry/entry.scss
+++ b/styles/modules/blocks/entry/entry.scss
@@ -1,7 +1,5 @@
 .entry {
   background-color: $back-color-r;
   color: $font-color-theme-dark;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  background-size: 100%;
 }
