--- a/styles/modules/blocks/flex-container/flex-container.scss
+++ b/styles/modules/blocks/flex-container/flex-container.scss
@@ -1,6 +1,6 @@
 .flex-container {
   margin: 0;
-  padding: 100px 4px 0;
+  padding: 100px 4px 0 6px;
   list-style: none;
   display: flex;
   justify-content: space-between;
@@ -9,7 +9,7 @@
 
 @media (max-width: $breakpoint-wide) {
   .flex-container {
-    padding: 50px 4px 0;
+    padding: 50px 4px 0 6px;
   }
 }
 
@@ -18,12 +18,12 @@
     flex-direction: column;
     justify-content: flex-start;
     align-self: flex-start;
-    padding: 50px 0 0;
+    padding: 50px 0 0 2px;
   }
 }
 
 @media (max-width: $breakpoint-narrow) {
   .flex-container {
-    padding: 66px 0 0;
+    padding: 66px 0 0 2px;
   }
 }
