--- a/styles/modules/blocks/footer/__label/footer__label.scss
+++ b/styles/modules/blocks/footer/__label/footer__label.scss
@@ -1,5 +1,5 @@
 .footer__label {
-  margin: 0;
+  margin: 0 0 0 2px;
   font-weight: 700;
   font-size: 15px;
   line-height: 1.6;
@@ -8,7 +8,7 @@
 
 @media (max-width: $breakpoint-narrow) {
   .footer__label {
-    margin: -20px 0 0;
+    margin: 6px 0 0 2px;
     font-size: 12px;
     line-height: 2;
   }
