--- a/styles/modules/blocks/grid-container/__image/grid-container__image.scss
+++ b/styles/modules/blocks/grid-container/__image/grid-container__image.scss
@@ -3,12 +3,12 @@
   grid-column: 2;
   grid-row: 1 / 3;
   max-width: 642px;
-  width: 100%;
+  width: calc(100% - 2px);
 }
 
 @media (max-width: $breakpoint-middle) {
   .grid-container__image {
-    margin: -2px 0 0;
+    margin: 0 0 0 2px;
     max-width: 860px;
   }
 }
