--- a/styles/modules/blocks/grid-container/__subtitle/grid-container__subtitle.scss
+++ b/styles/modules/blocks/grid-container/__subtitle/grid-container__subtitle.scss
@@ -1,5 +1,5 @@
 .grid-container__subtitle {
-  margin: 0 0 0 4px;
+  margin: 0 0 0 6px;
   grid-column: 1;
   grid-row: 2;
   align-self: flex-start;
@@ -7,6 +7,7 @@
 
 @media (max-width: $breakpoint-middle) {
   .grid-container__subtitle {
+    margin: 30px 0 30px 6px;
     grid-column: unset;
     grid-row: unset;
     align-self: inherit;
@@ -15,6 +16,6 @@
 
 @media (max-width: $breakpoint-narrow) {
   .grid-container__subtitle {
-    margin: 0 0 -30px 2px;
+    margin: 30px 0 0 4px;
   }
 }
