--- a/styles/modules/blocks/search/__link/search__link.scss
+++ b/styles/modules/blocks/search/__link/search__link.scss
@@ -8,7 +8,7 @@
 
 @media (max-width: $breakpoint-middle) {
   .search__link {
-    margin: 0;
+    margin: 0 0 0 2px;
     grid-column: unset;
     grid-row: unset;
     justify-self: flex-start;
