--- a/styles/modules/blocks/search/__subtitle/search__subtitle.scss
+++ b/styles/modules/blocks/search/__subtitle/search__subtitle.scss
@@ -17,8 +17,8 @@
 
 @media (max-width: $breakpoint-middle) {
   .search__subtitle {
-    margin: 0;
-    padding: 0 0 0 4px;
+    margin: 30px 0 30px 6px;
+    padding: 0;
     grid-column: unset;
     grid-row: unset;
     justify-self: flex-start;
@@ -29,7 +29,7 @@
 
 @media (max-width: $breakpoint-narrow) {
   .search__subtitle {
-    margin: 0 0 -30px;
+    margin: 30px 0 0 2px;
     padding: 0;
     width: 100%;
     max-width: 650px;
