--- a/styles/modules/blocks/search/__title/search__title.scss
+++ b/styles/modules/blocks/search/__title/search__title.scss
@@ -1,5 +1,5 @@
 .search__title {
-  margin: 0 0 106px;
+  margin: 0 0 106px 2px;
 }
 
 @media (max-width: $breakpoint-wide) {
@@ -10,7 +10,7 @@
 
 @media (max-width: $breakpoint-middle) {
   .search__title {
-    margin: 0;
+    margin: 0 0 30px 2px;
   }
 }
 
