--- a/styles/modules/blocks/section/section.scss
+++ b/styles/modules/blocks/section/section.scss
@@ -1,5 +1,8 @@
 .section {
   padding: $section-padding;
+  margin: 0 auto;
+  max-width: 1440px;
+  box-sizing: border-box;
 }
 
 @media (max-width: $breakpoint-middle) {
